test_suite/tests/compile-fail/macros/sm/invalid-initial-states-block.rs
extern crate sm;
use sm::sm;

sm!{
    Lock {
        InvalidName { Locked, Unlocked }
        //~^ ERROR expected `InitialStates { ... }` block
    }
}

fn main() {}
